# privata

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: contributing.md  getting-started.md  index.md  usage.md
src/privata/: __init__.py  __main__.py  _checker.py  _entrypoints.py  _exports.py  _imports.py  _models.py  _modules.py  _source_roots.py  cli.py
tests/: __init__.py  test_checker.py
